// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders design 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile___1-M3K"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile-view___1stZU src-shared-components-ChallengeTile-___style__design___1wk2u"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3w5tT"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___1jF7j"
          replace={false}
          to="/challenges/30051608"
        >
          <span>
            Sunshot - MapMySolar - SunGiver  - Brand Concept Logo Design Challenge
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___2AJaw"
        >
          Challenge
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___22F18"
        >
          October 2015
        </p>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___CYUWj"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___3xZDW src-shared-components-ChallengeTile-___style__data-science___2SGr7"
        />
        <p
          className="src-shared-components-ChallengeTile-___style__roles___1V-WA"
        >
          <span>
            <span>
              Role:  
            </span>
            <span>
              Submitter
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders develop 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile___1-M3K"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile-view___1stZU src-shared-components-ChallengeTile-___style__development___19vlt"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3w5tT"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___1jF7j"
          replace={false}
          to="/challenges/30060905"
        >
          <span>
            $100 Eaton PX 2.0 Petting Zoo - MDC Web Enhancement F2F Challenge
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___2AJaw"
        >
          First2Finish
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___22F18"
        >
          December 2017
        </p>
        <div
          className="src-shared-components-ChallengeTile-___style__winner-ribbon___321bD"
        >
          <WinnerRibbon
            height="26"
            viewBox="0 0 73 26"
            width="73"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___CYUWj"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___3xZDW src-shared-components-ChallengeTile-___style__data-science___2SGr7"
        />
        <p
          className="src-shared-components-ChallengeTile-___style__roles___1V-WA"
        >
          <span>
            <span>
              Role:  
            </span>
            <span>
              Submitter
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders marathon 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile___1-M3K"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile-view___1stZU src-shared-components-ChallengeTile-___style__data-science___2SGr7"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3w5tT"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___1jF7j"
          replace={false}
          to="/challenges/15404"
        >
          <span>
            2018 TCO Marathon
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___2AJaw"
        >
          Challenge
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___22F18"
        >
          May 2018
        </p>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___CYUWj"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___3xZDW src-shared-components-ChallengeTile-___style__data-science___2SGr7"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__marathon-score___V-afd"
          >
            <p
              className="src-shared-components-ChallengeTile-___style__score___pPbmo"
            >
              996714.71
            </p>
            <p>
              Total Points
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
